# pyasmer

./: .flake8  .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  requirements-dev.txt  setup.py  tox.ini
.github/workflows/: python-package.yml
example/: example.py  fib.py  importlib_example.py
pyasmer/: _pyasmer.pyi  asm_helper.py  asm_instruction.py  code_view.py  code_writer.py  op_help.py  structure.py
src/: pyasmer.c
src/clinic/: pyasmer.c.h  v3_10.h  v3_6.h  v3_7.h  v3_8.h  v3_9.h
tests/: test_asm_instruction.py  test_binary.py  test_call_function.py  test_jump.py  test_load_attr.py  test_remove_inst.py  test_view.py
